<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:id="@+id/grid_layout"
    android:padding="15dp">

    <TextView
        android:text="@string/name_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText android:id="@+id/name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:inputType="text"
        android:hint="@string/defaultExerciseName"/>

    <TextView
        android:text="@string/weight_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"/>

    <TextView
        android:text="@string/sets_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="fill_horizontal"/>

    <TextView
        android:text="@string/reps_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"/>

    <EditText android:id="@+id/weight_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:hint="@string/zeroDec"
        />


    <EditText android:id="@+id/sets_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:hint="@string/zeroInt"/>


    <EditText android:id="@+id/reps_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:hint="@string/zeroInt"/>


</GridLayout>